Closed
Bug 656096
Opened 14 years ago
Closed 14 years ago
TI+JM: Kraken crypto regression
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Unassigned)
References
Details
Attachments
(1 file, 1 obsolete file)
|
764 bytes,
application/javascript
|
Details |
Attachment is reduced from Kraken crypto-aes and crypto-ccm. It should print:
OK
test.js:19: TypeError: d is undefined
With -n -m -a it prints nothing.
Comment 1•14 years ago
|
||
Attachment #531406 -
Attachment is obsolete: true
Comment 2•14 years ago
|
||
While analyzing a loop body's modset we could incorrectly mark the compilation as having failed without throwing an exception, which would bubble up to TryCompile and cause the interpreter to just exit, also without reporting an exception. This adds an assertion to the compiler that if it produces an error there is a pending exception, and also fixes the loop body analysis to be infallible (it can allocate, but only into vectors with a CompilerAllocPolicy).
http://hg.mozilla.org/projects/jaegermonkey/rev/71e561e48de4
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•