[INFER] Don't incorrectly mark compilation failure on loop bodies with large modsets, bug 656096.