js/src/methodjit/Compiler.cpp
@@ -632,6 +632,8 @@ mjit::TryCompile(JSContext *cx, StackFrame *fp)
         return (status == JITScript_Valid) ? Compile_Okay : Compile_Retry;
     }
 
+    JS_ASSERT_IF(status == Compile_Error, cx->isExceptionPending());
+
     return status;
 }
 
